--- a/package.json
+++ b/package.json
@@ -15,13 +15,16 @@
     "vue": "^2.6.14"
   },
   "devDependencies": {
+    "@aws-amplify/ui-vue": "^0.2.33",
     "@babel/core": "^7.12.16",
     "@babel/eslint-parser": "^7.12.16",
     "@vue/cli-plugin-babel": "~5.0.0",
     "@vue/cli-plugin-eslint": "~5.0.0",
     "@vue/cli-service": "~5.0.0",
+    "aws-amplify": "^3.3.14",
     "eslint": "^7.32.0",
     "eslint-plugin-vue": "^8.0.3",
+    "graphql-tag": "^2.11.0",
     "vue-cli-plugin-tailwind": "~3.0.0",
     "vue-template-compiler": "^2.6.14"
   },
