--- a/package.json
+++ b/package.json
@@ -28,7 +28,8 @@
     "eslint-plugin-vue": "^8.0.3",
     "graphql-tag": "^2.11.0",
     "vue-cli-plugin-tailwind": "~3.0.0",
-    "vue-template-compiler": "^2.6.14"
+    "vue-template-compiler": "^2.6.14",
+    "vuex": "^3.6.0"
   },
   "eslintConfig": {
     "root": true,
