--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   "dependencies": {
     "autoprefixer": "^10",
     "core-js": "^3.8.3",
+    "moment": "^2.30.1",
     "postcss": "^8",
     "tailwindcss": "^3",
     "vue": "^2.6.14",
